# Neural-Fictisious-Self-Play

./: .gitignore  LICENSE  README.md  pyproject.toml
src/simple_nfsp/: nfsp_train.py  nfsp_train_kuhn_poker.py  play_cheat.py  test_plays.py
src/simple_nfsp/agents/: eval_agents.py  memory.py  nfsp_agent.py
src/simple_nfsp/games/: cheat.py  game.py  kuhn_poker.py
src/simple_nfsp/games/components/: deck.py  player.py
src/simple_nfsp/networks/: as_net.py  br_net.py
src/simple_nfsp/utils/: reservoir_sampling.py
