[tool.poetry]
name = "simple_nfsp"
version = "0.1.0"
description = ""
authors = ["BedirT <bedirtpkn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
numpy = "^1.26.4"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
